[gd_scene load_steps=2 format=3 uid="uid://b27chsai714up"]

[ext_resource type="Script" uid="uid://cop5qvdaou1rx" path="res://main-menu/mainmenuscene/script/create_user.gd" id="1_sxxen"]

[node name="Create User Panel" type="Panel"]
offset_left = 131.0
offset_top = 146.0
offset_right = 446.0
offset_bottom = 351.0
script = ExtResource("1_sxxen")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_top = 73.0
offset_right = 315.0
offset_bottom = 182.0

[node name="UsernameContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="UsernameText" type="RichTextLabel" parent="VBoxContainer/UsernameContainer"]
custom_minimum_size = Vector2(0, 35.83)
layout_mode = 2
size_flags_horizontal = 3
text = "Username:"

[node name="UsernameEnter" type="TextEdit" parent="VBoxContainer/UsernameContainer"]
custom_minimum_size = Vector2(0, 35.83)
layout_mode = 2
size_flags_horizontal = 3

[node name="PasswordContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="PasswordText" type="RichTextLabel" parent="VBoxContainer/PasswordContainer"]
custom_minimum_size = Vector2(0, 35.83)
layout_mode = 2
size_flags_horizontal = 3
text = "Password:"

[node name="PasswordEnter" type="TextEdit" parent="VBoxContainer/PasswordContainer"]
custom_minimum_size = Vector2(0, 35.83)
layout_mode = 2
size_flags_horizontal = 3

[node name="submit" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Submit
"

[node name="RichTextLabel" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 54.0
grow_horizontal = 2
bbcode_enabled = true
text = "
[center][b]Create New User"

[node name="return" type="Button" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -19.0
offset_bottom = 31.0
grow_horizontal = 0
text = "x"

[connection signal="button_down" from="VBoxContainer/submit" to="." method="_on_submit_button_down"]
[connection signal="button_down" from="return" to="." method="_on_return_button_down"]
